# ESB2BigQuery

./: .gcloudignore  .gitignore  Makefile  README.md  json_data.json  main.py  pyproject.toml
esbdata/: __init__.py  bigquery.py  esb.py  util.py
misc/: manual-payload.json
